@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.99 2002/04/15 02:08:09 mrylander Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.100 2002/04/18 21:38:40 rossigee Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -164,6 +164,10 @@ $conf->broken_forwarding = false;
 
 // This sets the number of messages per page to display from a imap folder or pop mailbox
 $conf->msg_per_page = '25';
+
+// Set this to '1' to enable the status line for folders at the bottom of the inbox page.
+// If you get slow page loads, set it to '0' to disable this (rather slow) function.
+$conf->status_line = '1';
 
 // ################### Messages Signature  ################### //
 
